made changes to image and build cake button

--- a/index.html
+++ b/index.html
@@ -109,21 +109,22 @@
         }
 
         .cake-button {
-            background-color: #8dff1b;
-            color: rgb(0, 0, 0);
-            border: 3px solid #000000;
-            padding: 10px 20px;
-            font-size: 1.6rem;
-            cursor: pointer;
+            position: relative;
+            display: inline-block;
+            padding: 12px 24px;
             width: 300px;
             height: 100px;
+            font-size: 1.8rem;
+            font-family: Arial, sans-serif;
+            font-weight: bold;
+            color: white;
+            background-color: #000;
+            border: solid 3px #000000;
             border-radius: 999px;
-            box-shadow: 5px 5px #000000;
-           align-items: center;
-            display: flex;
-            justify-content: center;
-            font: serif;
-            text-transform: uppercase;
+            cursor: pointer;
+            text-decoration: none;
+            transition: all 0.2s ease;
+            margin-top: 30px;;
         }
 
         .cake-button:active,
@@ -405,22 +406,22 @@
            
             <div class="photo-grid">
                 <div class="photo-placeholder" onclick="playSound('click')">
-                     <img src="images/IMG-20250808-WA0016.jpg" alt="Memory #1" style="width:100%; height:100%; object-fit:cover; border-radius:8px;">
+                     <img src="IMG-20250808-WA0016.jpg" alt="Memory #1" style="width:100%; height:100%; object-fit:cover; border-radius:8px;">
                 </div>
                 <div class="photo-placeholder" onclick="playSound('click')">
-                     <img src="images/memory1.jpg" alt="Memory #2" style="width:100%; height:100%; object-fit:cover; border-radius:8px;">
+                     <img src="memory1.jpg" alt="Memory #2" style="width:100%; height:100%; object-fit:cover; border-radius:8px;">
                 </div>
                 <div class="photo-placeholder" onclick="playSound('click')">
-                  <img src="images\IMG-20250808-WA0018.jpg" alt="Memory #3" style="width:100%; height:100%; object-fit:cover; border-radius:8px;">
+                  <img src="IMG-20250808-WA0018.jpg" alt="Memory #3" style="width:100%; height:100%; object-fit:cover; border-radius:8px;">
                 </div>
                 <div class="photo-placeholder" onclick="playSound('click')">
-                    <img src="images\WhatsApp Image 2025-03-30 at 19.32.11_bb7d610a.jpg" alt="Memory #4" style="width:100%; height:100%; object-fit:cover; border-radius:8px;">
+                    <img src="WhatsApp Image 2025-03-30 at 19.32.11_bb7d610a.jpg" alt="Memory #4" style="width:100%; height:100%; object-fit:cover; border-radius:8px;">
                 </div>
                 <div class="photo-placeholder" onclick="playSound('click')">
-                   <img src="images\WIN_20241015_23_40_55_Pro.jpg" alt="Memory #5" style="width:100%; height:100%; object-fit:cover; border-radius:8px;">
+                   <img src="WIN_20241015_23_40_55_Pro.jpg" alt="Memory #5" style="width:100%; height:100%; object-fit:cover; border-radius:8px;">
                 </div>
                 <div class="photo-placeholder" onclick="playSound('click')">
-                    <img src="images\IMG-20250808-WA0019.jpg" alt="Memory #6" style="width:100%; height:100%; object-fit:cover; border-radius:8px;">
+                    <img src="IMG-20250808-WA0019.jpg" alt="Memory #6" style="width:100%; height:100%; object-fit:cover; border-radius:8px;">
                     
                 </div>
             </div>
